--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: background_canvas
-description: "A new Flutter plugin project."
-version: 0.0.1
-homepage:
+description: "A Flutter package for creating dynamic, animated canvas backgrounds with 10 pattern types, real-time customization, color picker, glow effects, and mathematical precision."
+version: 2.0.0
+homepage: https://github.com/your-username/background_canvas
 
 environment:
   sdk: ^3.8.1
